[refs #84441] Fix overlapping problem for manage portlets btn.

--- a/src/eni/seis/theme/theme-south/src/less/south.less
+++ b/src/eni/seis/theme/theme-south/src/less/south.less
@@ -578,6 +578,7 @@ label {
 
 a.btn.btn-default[data-diazo='manage-portlets'] {
   float: right;
+  width: 100%;
 }
 
 :focus {
